[gd_scene load_steps=12 format=2]

[ext_resource path="res://scr/Menu.gd" type="Script" id=1]
[ext_resource path="res://fonts/Russo_One.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://menu_buttons.tres" type="StyleBox" id=3]
[ext_resource path="res://scr/Lobby.gd" type="Script" id=4]
[ext_resource path="res://fonts/NixieOne.ttf" type="DynamicFontData" id=5]

[sub_resource type="DynamicFont" id=1]
size = 25
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=5]
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=6]
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 5 )

[node name="Control" type="Control"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_top = -300.0
margin_right = 1024.0
margin_bottom = 300.0
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_top = -1.0
margin_right = 1024.0
margin_bottom = 599.0
color = Color( 0.909804, 0.670588, 0.435294, 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -200.0
margin_top = -75.0
margin_right = 200.0
margin_bottom = 75.0

[node name="Local" type="Button" parent="VBoxContainer"]
margin_right = 400.0
margin_bottom = 29.0
custom_fonts/font = SubResource( 1 )
custom_styles/hover = ExtResource( 3 )
custom_styles/pressed = ExtResource( 3 )
custom_styles/focus = ExtResource( 3 )
custom_styles/disabled = ExtResource( 3 )
custom_styles/normal = ExtResource( 3 )
text = "Start local game"

[node name="Host" type="Button" parent="VBoxContainer"]
margin_top = 33.0
margin_right = 400.0
margin_bottom = 62.0
custom_fonts/font = SubResource( 1 )
custom_styles/hover = ExtResource( 3 )
custom_styles/pressed = ExtResource( 3 )
custom_styles/focus = ExtResource( 3 )
custom_styles/disabled = ExtResource( 3 )
custom_styles/normal = ExtResource( 3 )
text = "Host networked game"

[node name="Join" type="Button" parent="VBoxContainer"]
margin_top = 66.0
margin_right = 400.0
margin_bottom = 95.0
custom_fonts/font = SubResource( 1 )
custom_styles/hover = ExtResource( 3 )
custom_styles/pressed = ExtResource( 3 )
custom_styles/focus = ExtResource( 3 )
custom_styles/disabled = ExtResource( 3 )
custom_styles/normal = ExtResource( 3 )
text = "Join hosted game"

[node name="LobbyPanel" type="Panel" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -110.0
margin_top = 68.0
margin_right = 110.0
margin_bottom = 152.0
size_flags_horizontal = 2
size_flags_vertical = 2
custom_styles/panel = ExtResource( 3 )
script = ExtResource( 4 )

[node name="AddressLabel" type="Label" parent="LobbyPanel"]
margin_left = 10.0
margin_top = 5.0
margin_right = 160.0
margin_bottom = 24.0
size_flags_horizontal = 2
size_flags_vertical = 0
custom_fonts/font = SubResource( 5 )
text = "Enter host address"

[node name="Address" type="LineEdit" parent="LobbyPanel"]
margin_left = 10.0
margin_top = 27.0
margin_right = 210.0
margin_bottom = 56.0
size_flags_horizontal = 2
size_flags_vertical = 2
custom_fonts/font = SubResource( 6 )
text = "127.0.0.1"

[node name="OkButton" type="Button" parent="LobbyPanel"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -40.0
margin_top = 18.0
margin_right = -9.0
margin_bottom = 38.0
custom_styles/hover = ExtResource( 3 )
custom_styles/pressed = ExtResource( 3 )
custom_styles/focus = ExtResource( 3 )
custom_styles/normal = ExtResource( 3 )
text = "Ok"

[node name="TextPanel" type="Panel" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -110.0
margin_top = 163.0
margin_right = 110.0
margin_bottom = 186.0
size_flags_horizontal = 2
size_flags_vertical = 2
custom_styles/panel = ExtResource( 3 )

[node name="StatusOk" type="Label" parent="TextPanel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -100.0
margin_top = -9.5
margin_right = 100.0
margin_bottom = 9.5
size_flags_horizontal = 2
size_flags_vertical = 0
custom_colors/font_color = Color( 0, 1, 0.015625, 1 )
custom_fonts/font = SubResource( 2 )
align = 1

[node name="StatusFail" type="Label" parent="TextPanel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -100.0
margin_top = -9.5
margin_right = 100.0
margin_bottom = 9.5
size_flags_horizontal = 2
size_flags_vertical = 0
custom_colors/font_color = Color( 1, 0, 0, 1 )
custom_fonts/font = SubResource( 3 )
align = 1

[node name="PortForward" type="Label" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -157.5
margin_top = -99.0
margin_right = 157.5
margin_bottom = -30.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_constants/line_spacing = 6
custom_fonts/font = SubResource( 4 )
text = "If you want non-LAN clients to connect,
make sure the port 8910 in UDP
is forwarded on your router."
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="VBoxContainer/Local" to="." method="_on_Local_pressed"]
[connection signal="pressed" from="VBoxContainer/Host" to="LobbyPanel" method="_on_Host_pressed"]
[connection signal="pressed" from="VBoxContainer/Join" to="LobbyPanel" method="_on_Join_pressed"]
[connection signal="text_entered" from="LobbyPanel/Address" to="LobbyPanel" method="_on_Address_text_entered"]
[connection signal="pressed" from="LobbyPanel/OkButton" to="LobbyPanel" method="_on_OkButton_pressed"]
